--- a/style.css
+++ b/style.css
@@ -1,16 +1,23 @@
-body{
-
-}
-
 h1{
    background-color: #a9a9a93b;
    border-width:5%;
    border-radius: 20px;
    padding:15px
 }
-div{
+.container{
+   display: flex;
+   align-items: flex-start;
+   justify-content: space-between;
+}
+.leftSidebar{
+   width: 15%;
    background-color: #a9a9a93b;
-   border-width:5px;
+   border-radius: 20px;
+   padding:15px
+}
+.hello{
+   width: 80%;
+   background-color: #a9a9a93b;
    border-radius: 20px;
    padding:15px
 }
